“同步服务器已验证的部署配置文件”

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,10 +1,11 @@
-version: "3.9"
+# version: "3.9"
 
 services:
-  # Nginx反向代理
+  # Nginx反向代理 - 使用官方镜像，无变量
   proxy:
     image: nginx:alpine
     container_name: webcalc_proxy
+    restart: always
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
     ports:
@@ -12,35 +13,37 @@ services:
     networks:
       - webcalc_network
 
-  # Blue版本应用
+  # Blue版本应用 - 直接使用您手动推送成功的镜像标签
   app_blue:
-    image: ${BLUE_TAG:-registry.gitlab.com/${CI_PROJECT_PATH}:latest}
+    image: ghcr.io/wkk08/web-calculator-ci-cd:manual-test
     container_name: webcalc_blue
+    restart: always
     environment:
       - FLASK_ENV=production
-      - PORT=5000
     networks:
       - webcalc_network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 10s
-      timeout: 2s
+      timeout: 5s
       retries: 3
+      start_period: 30s
 
-  # Green版本应用
+  # Green版本应用 - 直接使用您手动推送成功的镜像标签
   app_green:
-    image: ${GREEN_TAG:-registry.gitlab.com/${CI_PROJECT_PATH}:latest}
+    image: ghcr.io/wkk08/web-calculator-ci-cd:manual-test
     container_name: webcalc_green
+    restart: always
     environment:
       - FLASK_ENV=production
-      - PORT=5001
     networks:
       - webcalc_network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
       interval: 10s
-      timeout: 2s
+      timeout: 5s
       retries: 3
+      start_period: 30s
 
 networks:
   webcalc_network:
