--- a/deploy/nginx/conf.d/default.conf
+++ b/deploy/nginx/conf.d/default.conf
@@ -1,27 +1,19 @@
 upstream webcalc_upstream {
-    # 初始配置：指向blue版本
-    server app_blue:5000 max_fails=1 fail_timeout=5s;
-    # 备份：green版本（注释掉，部署时启用）
-    # server app_green:5001 max_fails=1 fail_timeout=5s backup;
+    # 主服务器指向 blue 容器（通过容器名和端口）
+    server webcalc_blue:5000 max_fails=1 fail_timeout=5s;
+    # 备份服务器指向 green 容器
+    server webcalc_green:5000 max_fails=1 fail_timeout=5s backup;
 }
 
 server {
     listen 80;
     server_name _;
     
-    access_log /var/log/nginx/webcalc_access.log;
-    error_log /var/log/nginx/webcalc_error.log;
-    
     location / {
         proxy_pass http://webcalc_upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
     }
     
     location /health {
